# rust-file-organizer

./: .gitignore  Cargo.toml  README.md
docs/: BUILD_AND_RUN.md  CODE_WALKTHROUGH.md  RUST_CONCEPTS.md
src/: main.rs
src/organizer/: file_types.rs  mod.rs
